Updated GitHub links in HTML pages

--- a/src/public/profile.html
+++ b/src/public/profile.html
@@ -36,7 +36,7 @@
       <div class="container">
         <p>&copy; 2025 NotesLe</p>
         <p>
-          <a href="https://github.com/yourrepo" class="footer-link">GitHub</a> |
+          <a href="https://github.com/kaiwalya-tech/NotesLe.git" class="footer-link">GitHub</a> |
           <a href="https://www.linkedin.com/in/kaiwalya-joshi/" class="footer-link">Connect</a>
         </p>
       </div>
